@@ -3,6 +3,10 @@ Copyright 2009-2020 Antti Ajanki
 Distributed under the GPL v3
 
 
+<unreleased>
+
+- Fixed Elävä Arkisto support
+
 Version 20200419
 
 - Support for new Areena audio series pages
